# fitsview

./: .gitignore  README.md  fitsview.py  g2viewer.py  guideview.py  pyproject.toml  setup.cfg
fitsview/plugins/: AgAreaSelection.py  AgAutoSelect.py  CurveFit.py  FOCAS.py  FocusFit.py  GView.py  Gen2Int.py  HSC.py  HSCPlanner.py  MESOffset.py  MOIRCSFit.py  MOIRCSTrend.py  MoircsAlign.py  ObsLog.py  PFS_AG.py  PFS_Focus.py  PFS_Focus2.py  QDAS.py  QL_CHARIS.py  QL_FOCAS.py  QL_HSC.py  QL_IRCS.py  QL_MOIRCS.py  QL_PFS.py  Region_Selection.py  SPCAM.py  Sv_Drive.py  VGW.py
fitsview/util/: AGCCDPositions.py  curve_fit.py  curvefit.py  fitsUtils.py  focas.py  fov_plot.py  g2calc.py  g2catalog.py  hsc.py  mesAnalyze.py  mesInterface.py  mesLocate.py  mosPlugin.py  pfswcs.py  polynomial.py  spcam.py
plugins/: ANA.py  AgAreaSelection.py  AgAutoSelect.py  Ana_Confirmation.py  Ana_UserInput.py  CHARIS.py  CurveFit.py  FocusFit.py  GView.py  Gen2Int.py  HSC.py  HSCPlanner.py  MESOffset.py  MOIRCSFit.py  MoircsAlign.py  ObsLog.py  PFS_AG.py  PFS_Focus.py  QDAS.py  QL_FOCAS.py  QL_IRCS.py  Region_Selection.py  SPCAM.py  Sv_Drive.py  VGW.py
scripts/: fitsview  guideview
util/: AGCCDPositions.py  Receive.py  curve_fit.py  fitsUtils.py  fov_plot.py  g2catalog.py  hsc.py  mesAnalyze.py  mesInterface.py  mesLocate.py  mosPlugin.py  polynomial.py  spcam.py
