[build-system]
requires = ["setuptools>=64",
            "setuptools_scm[toml]>=7",
            "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fitsview"
description = "Provides the FitsView and GuideView GUIs for Subaru Telescope."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [{name = "Software Division, Subaru Telescope, NAOJ", email = "ocs@naoj.org"}]
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
    "pyyaml>=5.3.1",
    "matplotlib>=3.4",
    "inotify>=0.2.10",
    "python-dateutil>=2.8.2",
    "ginga>=4.1.1",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools]
zip-safe = false
include-package-data = false
script-files = [
    "scripts/fitsview",
    "scripts/guideview",
]

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools_scm]
write_to = "fitsview/version.py"
version_scheme = "release-branch-semver"

[tool.ruff]
# match the historical flake8 line length
line-length = 79

[tool.ruff.lint]
# pycodestyle (E/W) + pyflakes (F), to mirror the previous flake8 setup
select = ["E", "W", "F"]
# Ignoring these (carried over from the old [flake8] config):
# E265: block comment should start with '#'
# E266: too many leading '#' for block comment
# E402: module level import not at top of file
# E501: line too long
# E741: ambiguous variable name 'l'
# F841: local variable is assigned to but never used
# E401: multiple imports on one line
ignore = ["E265", "E266", "E402", "E501", "E741", "F841", "E401"]
