[metadata]
name = fitsview
description = Provides the FitsView and GuideView GUIs for Subaru Telescope.
long_description = file: README.md
long_description_content_type = text/markdown
author = Software Division, Subaru Telescope, NAOJ
author_email = ocs@naoj.org
 
[options]
zip_safe = False
packages = find:
python_requires = >=3.8
install_requires =
    pyyaml>=5.3.1
    matplotlib>=3.4
    inotify>=0.2.10
    python-dateutil>=2.8.2
    ginga @ git+https://github.com/naojsoft/ginga
    g2cam @ git+https://github.com/naojsoft/g2cam
    # for SoundSink
    g2client @ git+https://github.com/naojsoft/g2client
setup_requires =
    setuptools_scm
include_package_data = False
scripts =
    scripts/fitsview
    scripts/guideview

